--- a/web/css/style.css
+++ b/web/css/style.css
@@ -43,3 +43,29 @@ body {
   border-top-left-radius: 0;
   border-top-right-radius: 0;
 }
+.row-footer{
+  background-color: #AfAfAf;
+  margin: 0px auto;
+  padding: 20px 0px 20px 0px;
+}
+.row-footer .row .navbar-nav >a:hover{
+  -moz-transform: rotate(360deg);
+  -webkit-transform: rotate(360deg);
+  -o-transform: rotate(360deg);
+  transform: rotate(360deg);
+  -moz-transition: all 0.5s ease-in-out;
+  -webkit-transition: all 0.5s ease-in-out;
+  -o-transition: all 0.5s ease-in-out;
+  -ms-transition: all 0.5s ease-in-out;
+  transition: all 0.5s ease-in-out;
+
+}
+
+.row-footer .row .navbar-nav .btn{
+  padding: 0px;
+}
+/*
+.carousel .item {
+  height: 350px;
+}
+*/
